--- a/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
@@ -43,23 +43,23 @@
 <div class='widget footer'>
     <ul>        
         <li>
-            <a target="_self" href='{{ url('page_help') }}' title="Privacy">Help Center</a>
+            <a target="_self" href='{{ url('page_help') }}' title="Help Center">Help Center</a>
         </li>
         <li>
             <a target="_self" href='{{ url('page_privacy') }}' title="Privacy">Privacy</a>
         </li>
         <li>
-            <a target="_self" href='{{ url('page_terms') }}' title='terms'>Terms</a>
+            <a target="_self" href='{{ url('page_terms') }}' title='Terms'>Terms</a>
         </li>
         <li>
-            <a target="_self" href='{{ url('page_cookies') }}' title='cookies'>Cookies</a>
+            <a target="_self" href='{{ url('page_cookies') }}' title='Cookies'>Cookies</a>
         </li>
         <li>
-            <a target="_self" href='{{ url('page_about') }}' title='about'>About</a>
+            <a target="_self" href='{{ url('page_about') }}' title='About'>About</a>
         </li>
         <li>
             <a target="_self" href='{{ url('page_license') }}' title='License'>License</a>
         </li>
     </ul>
-    <span class='copy'>Prestapic © 2015</span>
+    <span class='copy'>Prestapic © 2016</span>
 </div>
