Remove gallery add filter on profile

--- a/src/PP/RequestBundle/Resources/views/Request/propositionPattern.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/propositionPattern.html.twig
@@ -1,3 +1,4 @@
+<body>
 {% if (proposition.image is not null) %}                    
     <div class="reply" >
        <div class="prop" style="background-color: #{{ proposition.image.avgColor }};">
@@ -33,3 +34,4 @@
         </div> 
     </div>                        
 {% endif %}
+</body>
