--- a/src/AppBundle/Resources/public/css/init.sass
+++ b/src/AppBundle/Resources/public/css/init.sass
@@ -38,5 +38,9 @@ $icon-cross: "\e90c"
 $icon-warning: "\e90b"
 $icon-explore: "\e912"
 $icon-right: "\e913"
+$icon-plus: "\e917"
+$icon-minus: "\e916"
+$icon-dots: "\e914"
+$icon-help: "\e915"
 
 @import mixin
