--- a/src/PP/PropositionBundle/Resources/public/css/style.sass
+++ b/src/PP/PropositionBundle/Resources/public/css/style.sass
@@ -96,6 +96,8 @@ section.slideshow
 					text-decoration: none
 
 					&:hover
+						text-decoration: none
+						
 						&:after
 							animation: beat 1.25s cubic-bezier(.165,.84,.44,1) infinite
 					
