--- a/src/AppBundle/Resources/public/css/dropdown.sass
+++ b/src/AppBundle/Resources/public/css/dropdown.sass
@@ -18,7 +18,7 @@
 		background: white
 		width: 250px
 		margin: 0
-		padding: 10px 0
+		padding: 0
 		list-style: none
 		border: 1px solid rgba(0,0,0,.1)
 		border-radius: 3px
@@ -31,6 +31,9 @@
 			margin-bottom: 5px
 			padding: 5px 0
 			border-bottom: 1px solid rgba(0,0,0,.1)
+
+			&:first-child
+				padding-top: 10px
 
 			&:last-child
 				margin-bottom: 0
