--- a/src/PP/RequestBundle/Resources/public/css/style.sass
+++ b/src/PP/RequestBundle/Resources/public/css/style.sass
@@ -12,13 +12,21 @@ section.main
 		float: left
 		margin: 0 15px
 
+		&:before, &:after
+			background: none
+			content: ""
+			display: inline-block
+			width: 100%
+			height: 0
+			float: left
+
 		.main-top
 			width: 100%
 			height: auto
-			margin: 0 0 25px
+			margin: 0 0 15px
 
 			a.section, .dropdown-container .dropdown-text
-				font-size: 20px
+				font-size: 22px
 				color: #777
 				text-transform: uppercase
 				font-weight: 600
@@ -322,8 +330,11 @@ section.main
 					font-size: 15px
 					line-height: 20px
 					text-transform: uppercase
+					text-decoration: none
 
 					&:hover
+						text-decoration: none
+						
 						&:after
 							animation: beat 1.25s cubic-bezier(.165,.84,.44,1) infinite
 
@@ -664,7 +675,7 @@ section.main
 				padding-top: 10px
 
 			.widget-title
-				margin: 0 0 10px
+				margin: 0 0 15px
 				padding: 0
 				font-size: 22px
 				display: inline-block
