--- a/src/PP/UserBundle/Resources/public/css/style.sass
+++ b/src/PP/UserBundle/Resources/public/css/style.sass
@@ -88,45 +88,200 @@ article.profile-card
 			font-size: 14px
 			word-wrap: break-word
 
-section.profile
-	position: relative
+// Header profile
+section.profile-container
 	width: 100%
 	height: auto
+	position: relative
 
-	.profile-cover
-		background: $main-color
-		position: absolute
+	.profile-show-cover, .profile-edit-cover
 		width: 100%
-		height: 100%
+		height: auto
+		padding: 147px 0 70px
 		overflow: hidden
 
-		.banner
-			background-position: center center
-			background-repeat: no-repeat
-			background-size: cover
+		.profile-container
+			position: relative
+			width: 100%
+			max-width: 750px
+			height: auto
+			margin: 0 auto
+			text-align: center
+			z-index: 5
+
+			.profile-infos
+				margin-bottom: 40px
+
+				.avatar
+					width: 100px
+					height: 100px
+					border: 1px solid white
+					position: relative
+
+					.profile-avatar-editing
+						position: absolute
+						z-index: 1
+						background: rgba(0,0,0,0.5)
+						width: 100%
+						height: 100%
+						top: 0
+						left: 0
+						border-radius: 50%
+
+						&:hover
+							background: rgba(0,0,0,0.75)
+							border: 2px solid white
+
+						&:before
+							position: absolute
+							top: 50%
+							left: 50%
+							@include vendor-prefix(transform, translate(-50%,-50%))
+							font-family: "pp-font"
+							content: $icon-upload
+							color: white
+							font-size: 35px
+
+						input
+							position: absolute
+							z-index: 2
+							margin: 0
+							padding: 0
+							width: 100%
+							height: 100%
+							outline: none
+							top: 0
+							left: 0
+							opacity: 0
+							cursor: pointer
+
+					.profile-avatar-new
+						background-size: cover
+						background-repeat: no-repeat
+						background-position: center center
+						position: absolute
+						width: 100px
+						height: 100px
+						top: 50%
+						left: 50%
+						@include vendor-prefix(transform, translate(-50%,-50%))
+
+				.username
+					font-size: 24px
+					color: white
+					font-weight: 600
+					padding: 0 15px
+					word-wrap: break-word
+					letter-spacing: 0px
+
+					div
+						height: 31px
+
+						input, textarea
+							background: transparent
+							width: 100%
+							height: 31px
+							border: none
+							margin: 0 auto
+							padding: 0
+							text-align: center
+							font-size: 24px
+							color: white
+							font-weight: 600
+							resize: none
+							letter-spacing: 0px
+
+				.screenname
+					font-size: 18px
+					color: rgba(255,255,255,.75)
+					padding: 0 15px
+					margin-bottom: 10px
+					word-wrap: break-word
+
+				.actions
+					display: block
+					padding: 0 15px
+
+					.dropdown-container
+						ul.dropdown-choices
+							width: 100%
+
+			.profile-stats
+				font-size: 18px
+				color: rgba(255,255,255,.75)
+				margin-bottom: 10px
+
+				ul
+					li
+						display: inline-block
+						margin-right: 20px
+
+						&:last-child
+							margin-right: 0
+
+			.profile-bio
+				font-size: 20px
+				color: white
+				padding: 0 15px
+				margin-bottom: 10px
+				word-wrap: break-word
+				letter-spacing: 0px
+
+				div
+					height: 50px
+
+					input, textarea
+						background: transparent
+						width: 100%
+						height: 50px
+						border: none
+						margin: 0 auto
+						padding: 0
+						text-align: center
+						font-size: 20px
+						color: white
+						resize: none
+						letter-spacing: 0px
+
+			.profile-links
+				word-wrap: break-word
+
+				a
+					font-size: 18px
+					color: rgba(255,255,255,.5)
+					text-decoration: underline
+					word-wrap: break-word
+					letter-spacing: 0px
+
+				div
+					height: 23px
+
+					input, textarea
+						background: transparent
+						width: 100%
+						height: 23px
+						border: none
+						margin: 0 auto
+						padding: 0
+						text-align: center
+						font-size: 18px
+						color: rgba(255,255,255,.5)
+						resize: none
+						letter-spacing: 0px
+
+		.profile-cover-dropzone, .profile-overlay, .profile-cover-new, .profile-cover
 			position: absolute
 			width: 100%
 			height: 100%
 			top: 0
-			z-index: 0
+			left: 0
 
-		.overlay
-			width: 100%
-			height: 100%
-			background: rgba(0,0,0,.25)
-			position: absolute
-			top: 0
-			z-index: 1
-
-		.edit-cover
-			position: absolute
-			z-index: 2
-			width: 100%
-			height: 100%
+		.profile-cover-dropzone
+			z-index: 4
 			border: 5px solid transparent
 
 			&:before, &:after
-				z-index: 2
+				z-index: 4
 				color: white
 				position: absolute
 
@@ -148,7 +303,7 @@ section.profile
 				text-transform: uppercase
 
 			&:hover
-				background: rgba(0,0,0,.25)
+				background: rgba(0,0,0,0.25)
 				border: 5px solid $main-color
 
 			label
@@ -167,220 +322,25 @@ section.profile
 				opacity: 0
 				cursor: pointer
 
-	.cover-image-container
-		z-index: 0
+		.profile-overlay
+			background: -webkit-linear-gradient(rgba(0,0,0,.25) 0,rgba(0,0,0,.25) 60%,rgba(0,0,0,1) 100%)
+			background: -o-linear-gradient(rgba(0,0,0,.25) 0,rgba(0,0,0,.25) 60%,rgba(0,0,0,1) 100%)
+			background: -ms-linear-gradient(rgba(0,0,0,.25) 0,rgba(0,0,0,.25) 60%,rgba(0,0,0,1) 100%)
+			background: linear-gradient(rgba(0,0,0,.25) 0,rgba(0,0,0,.25) 60%,rgba(0,0,0,1) 100%)
+			// background: rgba(0,0,0,.25)
+			z-index: 3
 
-		.cover-upload
-			background-position: center center
-			background-repeat: no-repeat
+		.profile-cover-new, .profile-cover
 			background-size: cover
-			position: absolute
-			width: 100%
-			height: 100%
-			top: 0
-			z-index: 0
+			background-repeat: no-repeat
+			background-position: center center
+		
+		.profile-cover-new
+			z-index: 2
 
-		.overlay
-			width: 100%
-			height: 100%
-			background: rgba(0,0,0,.25)
-			position: absolute
-			top: 0
+		.profile-cover
+			background-color: $main-color
 			z-index: 1
-
-	.profile-details
-		width: 750px
-		height: auto
-		margin: 0 auto
-		padding: 146px 0 70px
-		position: relative
-		z-index: 2
-		color: white
-		text-align: center
-
-		input[type="text"], textarea
-			background: transparent
-			width: 100%
-			border: none
-			text-align: center
-			resize: none
-
-		.avatar
-			width: 100px
-			height: 100px
-			border-radius: 50%
-			overflow: hidden
-			display: block
-			margin: 0 auto
-			border: 1px solid white
-			position: relative
-
-			img
-				width: 100%
-
-			.profile-avatar-editing
-				position: absolute
-				z-index: 1
-				background: rgba(0,0,0,.5)
-				width: 100%
-				height: 100%
-				top: 0
-				left: 0
-				border-radius: 50%
-
-				&:before
-					position: absolute
-					top: 50%
-					left: 50%
-					@include vendor-prefix(transform, translate(-50%,-50%))
-					font-family: "pp-font"
-					content: $icon-upload
-					color: white
-					font-size: 35px
-
-				&:hover
-					background: rgba(0,0,0,.75)
-					border: 2px solid white
-
-				input
-					position: absolute
-					z-index: 2
-					margin: 0
-					padding: 0
-					width: 100%
-					height: 100%
-					outline: none
-					top: 0
-					left: 0
-					opacity: 0
-					cursor: pointer
-
-		h1.username
-			font-size: 40px
-			font-weight: 600
-			margin: 7px 0 0
-			word-wrap: break-word
-
-		.screenname
-			font-size: 18px
-			color: rgba(255,255,255,.75)
-			word-wrap: break-word
-
-		.bio
-			font-size: 20px
-			margin: 0 auto 10px
-			word-wrap: break-word
-
-		.profile-actions
-			width: 100%
-			height: auto
-
-			.profile-options
-				width: 36px
-				display: inline
-
-				.button
-					background: transparent
-					width: 36px
-					height: 36px
-					position: relative
-					padding: 8px
-
-					&:before
-						color: rgba(255,255,255,.5)
-						width: 20px
-						height: 20px
-						font-family: "pp-font"
-						content: $icon-dropdown
-						font-size: 16px
-
-					&:hover, &:focus
-						box-shadow: none
-
-						&:before
-							color: white
-
-				ul.dropdown-choices
-					padding: 0px 0
-					text-align: left
-
-		ul.details
-			margin: 10px auto 0
-			padding: 0
-
-			li
-				list-style: none
-				margin: 0
-				padding: 0 10px
-				display: inline
-				border-right: 1px solid white
-
-				&:nth-last-child(2), &:nth-last-child(1)
-					border-right: none
-
-			li.link
-				display: block
-				margin: 10px 0 0
-
-				a
-					color: rgba(255,255,255,.75)
-					font-size: 18px
-
-		.follow, .pm
-			background: white
-			color: #222
-			font-size: 14px
-			margin: 20px 0 0
-
-			&:hover
-				background: #4AC25E
-				border: 1px solid #4AC25E
-				color: white
-
-		.unfollow:hover
-			background: $main-color
-			border: 1px solid $main-color
-
-section.profile-galery
-	width: 100%
-	height: auto
-	padding: 45px 0 0
-
-	div.content
-		padding: 0 45px
-
-		ul
-			margin: 0
-			padding: 0
-			overflow: hidden
-			display: block
-
-			li
-				list-style: none
-				display: block
-				float: left
-				margin-right: 10px
-
-				&:last-child
-					margin: 0
-
-				a
-					display: block
-					width: 285px
-					height: 195px
-					overflow: hidden
-
-					&.more
-						background: #d8d8d8
-						color: rgba(0,0,0,.25)
-						text-align: center
-						padding: 65px 0
-						font-size: 60px
-						
-
-					img
-						width: 285px
-						height: 195px
 
 .full-main
 	width: 1200px
