--- a/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
@@ -1,50 +1,44 @@
-
-<form action="{{ path('pp_user_edit')}}" {{ form_enctype(editUserForm) }} method="POST" class="editProfileForm" >
-
+<form action="{{ path('pp_user_edit')}}" {{ form_enctype(editUserForm) }} method="POST" id="editProfileForm">
     {{ form_errors(editUserForm) }}
-
-    <div class="profile-cover">
-        <div class="edit-cover">
-            {{ form_row(editUserForm.coverImage) }}
-        </div>
-        {% if currentUser.coverImage != null %}
-            <div class="banner" style="background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }})"></div>
-            <div class="overlay"></div> 
-        {% endif %}
-    </div>
-    <div class="cover-image-container" id="coverImageContainer"></div>
-
-    <div class="profile-details">
-        <div class="avatar">
-            <div id="profileImageContainer">
+    <div class="profile-container">
+        <div class="profile-infos">
+            <div class="avatar">
+                <div class="profile-avatar-new" id="profileImageContainer"></div>
                 <img src="{{ asset(currentUser.profilImage.webPath("70x70")) }}" alt="{{ currentUser.profilImage.alt }}">
-            </div>            
-            <div class="profile-avatar-editing">
-                {{ form_widget(editUserForm.profilImage) }}
+                <div class="profile-avatar-editing">
+                    {{ form_widget(editUserForm.profilImage) }}
+                </div>
+            </div>
+            <!-- <output id="list"></output> -->
+            <div class="username">
+                {{ form_row(editUserForm.name, {'attr':  {'placeholder': 'Name'}}) }}
+            </div>
+            <div class="screenname">@{{ currentUser.username }}</div>
+            <div class="actions">
+                <button class="button changes" type="submit">
+                    <span>Save</span>
+                </button>
+                <a href="" id="cancelButton" class="button cancel" ng-click="profile.cancelEditProfile()">Cancel</a>
             </div>
         </div>
-        <output id="list"></output>
-        <h1 class="username">{{ form_row(editUserForm.name, {'attr':  {'placeholder': 'Name'}}) }}</h1>
-        <div class="screenname">@{{ currentUser.username }}</div>
-        <div class="bio">
+        <div class="profile-stats">
+            <ul>
+                <li>{% if currentUser.followingNb != null %}{{ currentUser.followingNb }}{% else %}0{% endif %} Following</li>
+                <li>{% if currentUser.followersNb != null %}{{ currentUser.followersNb }}{% else %}0{% endif %} Follower{% if currentUser.followersNb != 1 %}s{% endif %}</li>
+            </ul>
+        </div>
+        <div class="profile-bio">
             {{ form_row(editUserForm.description, {'attr':  {'placeholder': 'Insert your bio here...', 'class': 'bio', 'rows': '2'}}) }}
         </div>
-        <input class="button green" type="submit" value="Save" />
-        <a href="" id="cancelButton" class="button" ng-click="profile.cancelEditProfile()">Cancel</a>
-
-        <ul class="details">
-            <li>
-                <strong>Following</strong>
-                {% if currentUser.followingNb != null %}{{ currentUser.followingNb }}{% else %}0{% endif %}
-            </li>
-            <li>
-                <strong>Followers</strong>
-                {% if currentUser.followersNb != null %}{{ currentUser.followersNb }}{% else %}0{% endif %}
-            </li>
-            <li class="link">
-                <a href="#" title="">{{ form_row(editUserForm.contact, {'attr':  {'placeholder': 'Website'}}) }}</a>
-            </li>
-        </ul>
+        <div class="profile-links">
+            {{ form_row(editUserForm.contact, {'attr':  {'placeholder': 'Website (ex: name@domain.com)'}}) }}
+        </div>
     </div>
+    <div class="profile-cover-dropzone">{{ form_row(editUserForm.coverImage) }}</div>
+    {% if currentUser.coverImage != null %}
+        <div class="profile-overlay"></div>
+        <div class="profile-cover-new" id="coverImageContainer" style="background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }})"></div>
+        <div class="profile-cover" {% if currentUser.coverImage != null %}style="background-color: #{{ currentUser.coverImage.avgColor }};background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }});"{% endif %}></div>
+    {% endif %}
     {{ form_rest(editUserForm) }}
 </form>
