Visual feedback when form error or success + email not confirmed banner

--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -28,7 +28,7 @@
                             </div>                        
                             <div class="action-group right">
                                     <a ng-if="proposition.selected"class="selecting-prop selected" href="#">Selected picture</a>
-                                    <button ng-click="popup.close()" class="button-close">×</button>
+                                    <button id="closePopupPropositionButton" ng-click="popup.close()" class="button-close">×</button>
                             </div>
                     </div>
             <div id="propActionBottom"> 
