--- a/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/edit_profile_form.html.twig
@@ -37,8 +37,10 @@
     <div class="profile-cover-dropzone">{{ form_row(editUserForm.coverImage) }}</div>
     {% if currentUser.coverImage != null %}
         <div class="profile-overlay"></div>
-        <div class="profile-cover-new" id="coverImageContainer" style="background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }})"></div>
+        <div class="profile-cover-new" id="coverImageContainer" style="background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }})"></div>        
         <div class="profile-cover" {% if currentUser.coverImage != null %}style="background-color: #{{ currentUser.coverImage.avgColor }};background-image: url({{ asset(currentUser.coverImage.webPath("1500x500")) }});"{% endif %}></div>
-    {% endif %}
+    {% else %}
+        <div class="profile-cover" style="background-color: #c24c4a;"></div>
+    {% endif %}    
     {{ form_rest(editUserForm) }}
 </form>
