--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -16,7 +16,8 @@
         '@PPRequestBundle/Resources/public/css/style.sass'
         '@PPPropositionBundle/Resources/public/css/style.sass'
         '@PPPageBundle/Resources/public/css/style.sass'
-        '@PPMessageBundle/Resources/public/css/style.sass' %}
+        '@PPMessageBundle/Resources/public/css/style.sass'
+        '@AppBundle/Resources/public/css/responsive.sass' %}
         <link rel="stylesheet" href="{{ asset_url }}" type="text/css" />
     {% endstylesheets %}        
 
