--- a/src/AppBundle/Resources/public/css/global.sass
+++ b/src/AppBundle/Resources/public/css/global.sass
@@ -56,7 +56,8 @@ img
 	border: none
 
 div.content
-	width: 1260px
+	width: 100%
+	max-width: 1260px
 	margin: 0 auto
 	padding: 0 30px
 	display: block
