--- a/src/PP/RequestBundle/Resources/public/css/style.sass
+++ b/src/PP/RequestBundle/Resources/public/css/style.sass
@@ -6,7 +6,8 @@ section.main
 	display: inline-block
 
 	.main-left
-		width: 770px
+		width: 100%
+		max-width: 770px
 		height: auto
 		display: inline-block
 		float: left
@@ -57,7 +58,8 @@ section.main
 
 		article.request, article.request-single
 			background: white
-			width: 770px
+			width: 100%
+			max-width: 770px
 			height: auto
 			display: block
 			margin: 0 0 15px
@@ -75,7 +77,8 @@ section.main
 					background: rgba(0, 0, 0, 0.03)
 
 			.request-container
-				width: 770px
+				width: 100%
+				max-width: 770px
 				height: auto
 				padding: 15px 20px
 				display: block
@@ -83,7 +86,8 @@ section.main
 				position: relative
 
 				h1
-					width: 630px
+					width: 100%
+					max-width: 630px
 					height: auto
 					padding: 0
 					margin: 0 0 10px
@@ -116,7 +120,8 @@ section.main
 					word-wrap: break-word
 
 				.author-container
-					width: 285px
+					width: 100%
+					max-width: 285px
 					height: 48px
 					display: inline-block
 					float: left
@@ -144,7 +149,8 @@ section.main
 						word-wrap: break-word
 
 				.tag-list
-					width: 445px
+					width: 100%
+					max-width: 445px
 					height: auto
 					float: right
 					text-align: right
@@ -152,7 +158,8 @@ section.main
 
 			.propositions-container, .actions-container
 				background-color: rgba(0,0,0,.03)
-				width: 770px
+				width: 100%
+				max-width: 770px
 				height: auto
 				display: block
 				float: left
